Java lessons 5-8 and a Spanish locale for the whole site
- Java for C#: exceptions/null/Optional, lambdas, collections and
  streams, pattern matching. 98 tests (56 rejected snippets, 21 example
  outputs, 21 exercise solutions) plus the C# side for l05-l08.
- French and Spanish translations of lessons 5-8, index and journal.
- New es locale: sidebar labels, home, method, artifacts, WSL, Rust,
  Java courses and the generated Streeling pages.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Pbqsufo6LWJaBinkZGcUKg